# mcp

./: .env.example  .gitignore  CHANGELOG.md  README.md  pyproject.toml  railway.json  requirements.txt  server.json
api/: index.py
src/dock_ai_mcp/: __init__.py  config.py  jwt_handler.py  oauth_provider.py  rate_limit.py  responses.py  server.py  validators.py
src/dock_ai_mcp/middleware/: __init__.py  dynamic_tools.py
src/dock_ai_mcp/tools/: __init__.py  confirm_action.py  execute_action.py  my_organization.py  prepare_action.py  resolve_domain.py
src/dock_ai_mcp/ui/: __init__.py  action_form.py
