[project]
name = "dock-ai-mcp"
version = "0.1.0"
description = "MCP server for Dock AI - resolve entities to MCP endpoints"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
dock-ai-mcp = "dock_ai_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dock_ai_mcp"]
