[project]
name = "dock-ai-mcp"
version = "1.0.0"
description = "MCP server for Dock AI - resolve entities to MCP endpoints"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.27.0",
    "PyJWT>=2.8.0",
    "pydantic>=2.0.0",
    "starlette>=0.27.0",
    "upstash-ratelimit>=1.1.0",
    "upstash-redis>=1.0.0",
]

[project.scripts]
dock-ai-mcp = "dock_ai_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dock_ai_mcp"]
